tests/NormalTests/paczka1/fuzzy1/34789136.err
Error in line 2: A232 S94 93,2
Error in line 10: R8NK S94 58,3
Error in line 12: f2iKcbq1uJ S53 94,6
Error in line 14: OXwbAy S94 57,8
